--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>My fist website</h1>
-    <h3>Look mama!!! I can push to github</h3>
+   <p>I am a gost</p>
+    <p>Felling Happy Now</p>
 </body>
 </html>
