--- a/index.html
+++ b/index.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>My fist website</h1>
-   <p>I am a gost</p>
-    <p>Felling Happy Now</p>
-</body>
-</html>
+<h1>my first website</h1>
+<p>Feeling happy happy now</p>
+<p>I am a ghost</p>
+<input type="text">
+<br>
+<button>Click me!</button>
