--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>My fist website</h1>
-   <p>I am a gost</p>
-    <p>Felling Happy Now</p>
+    <h1>My first ever website</h1>
+    <p>Felling Happy now</p>
+    <p>I am a ghost</p>
+    <p>I am a nil pori lal jin</p>
 </body>
 </html>
