--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>My fist website</h1>
-   <p>I am a gost</p>
+   <p>I am a gost gin pori</p>
     <p>Felling Happy Now</p>
 </body>
 </html>
