--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <h1>My fist website</h1>
    <p>I am a gost gin pori</p>
     <p>Felling Happy Now</p>
+    <input type="text">
+    <button>Click here</button>
 </body>
 </html>
