--- a/index.html
+++ b/index.html
@@ -1,6 +1,1 @@
-<h1>my first website</h1>
-<p>Feeling happy happy now</p>
-<p>I am a ghost</p>
-<input type="text">
-<br>
-<button>Click me!</button>
+<h1>My neme is emran</h1>
